# franklin-magic

./: CHANGELOG.md  bump_version.py  package.json  pyproject.toml  tsconfig.json
.github/workflows/: conda-release.yml  pypi-release.yml
conda/: build.sh  meta.yaml
conda-build/: README.md  build_env.yaml  meta.yaml
docs/: _quarto.yml  objects.txt
docs/pages/: getting_started.qmd
src/: index.ts
src/franklin-magic/: magic.py
