[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franklin_magic"
version = "0.1.0"
description = "A custom Jupyter magic for installing Pixi packages"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/franklin_magic"

[tool.setuptools.packages.find]
where = ["src/franklin_magic"]

[project.entry-points."ipython_magic"]
franklin_magic = "franklin_magic.magic:load_ipython_extension"