[build-system]
requires = ["setuptools>=60", "wheel", "jupyter_packaging>=0.12"]
build-backend = "setuptools.build_meta"

[project]
name = "franklin-magic"
version = "0.1.0"
description = "Combined JupyterLab extension and IPython line magic for Pixi-based package management"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.7"
dependencies = ["ipython", "jupyterlab>=4"]

[tool.setuptools]
packages = ["franklin_magic"]
include-package-data = true

[tool.setuptools.package-data]
"franklin_magic.labextension" = ["**/*"]

[tool.jupyter-packaging.builder]
builder = "jupyter_packaging.npm_builder"
build_cmd = "build"
source_dir = "js"
build_dir = "franklin_magic/labextension"

[tool.jupyter-packaging.data_files]
"share/jupyter/labextensions/franklin-magic" = ["franklin_magic/labextension/**/*", "js/install.json"]
# "share/jupyter/labextensions/franklin-magic" = ["js/install.json"]